# mk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .project  .pycrunch-config.yaml  .pydevproject  .pylintrc  INFO  Makefile  README.md  README.rst  TODO.py  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
creat/: __main__.py  build.py  ex.py  find.py  index.py  location.py  presentations.py  run.py
creat/action/: bases.py  copy.py  move.py  remove.py  shell.py  use.py
mk/: __init__.py  __main__.py  bases.py  build.py  context.py  env.py  ex.py  find.py  index.py  item.py  location.py  make_base.py  make_copy.py  make_move.py  make_remove.py  make_shell.py  make_use.py  mknew.py  presentations.py  run.py  shell.py  source.py  source_build.py  trace.py  types.py  ui.py  use.py  validate.py
mk/action/: bases.py  copy.py  make_base.py  make_copy.py  make_move.py  make_remove.py  make_shell.py  make_use.py  move.py  remove.py  shell.py  use.py
mknew/: mknew.py
source/: conf.py  index.rst
test/: conftest.py  test_cd.py  test_doc.py  test_find.py  test_show.py  test_source.py
test/action/: test_config.py  test_copy.py  test_move.py  test_remove.py  test_use.py
test/fixtures/: __init__.py  mkroot.py
tests/: conftest.py  test_cd.py  test_cli.py  test_doc.py  test_find.py  test_show.py  test_source.py
tests/action/: test_config_file.py  test_copy.py  test_move.py  test_remove.py  test_use.py
