[tool.poetry]
name = "mk"
version = "0.6.0"
description = "CLI frontend for templating"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "mk" }
]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
click = "^7.1.2"
python-decouple = "^3.3"
loguru = "^0.5.3"
strictyaml = "^1.2.0"
colorama = "^0.4.4"
rich = "^9.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
pytest = "^6.2.1"
safety = "^1.10.0"
black = "^20.8b1"
pycrunch-engine = "^1.2.1"
aiohttp = "^3.7.3"
aiohttp_cors = "^0.7.0"

[tool.poetry.scripts]
mk = 'mk.__main__:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
