[tool.poetry]
name = "mk"
version = "0.6.6"
description = "CLI frontend for templating"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "mk" }
]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
click = "^7.1.2"
python-decouple = "^3.3"
loguru = "^0.5.3"
strictyaml = "^1.2.0"
colorama = "^0.4.4"
rich = "^9.8.2"
copier = "^5.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.5.3"
pytest = "^6.2.1"
safety = "^1.10.0"
black = "^20.8b1"
pycrunch-engine = "^1.2.1"
aiohttp = "^3.7.3"
aiohttp_cors = "^0.7.0"
interrogate = "^1.3.2"
bandit = "^1.7.0"
isort = "^4.2.5"
pre-commit = "^2.9.3"
mypy = "^0.800"

[tool.poetry.scripts]
mk = 'mk.__main__:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = ["no-self-use",
    "missing-function-docstring",
    "missing-module-docstring",
    "invalid-name",
    "missing-class-docstring",
    "unused-import",
    "redefined-outer-name",
    "subprocess-run-check",
    "empty-docstring",
    "redefined-builtin",
    "too-few-public-methods",
    "fixme",
    "broad-except",
    "unsubscriptable-object", # https://github.com/PyCQA/pylint/issues/3882
    "duplicate-code",
    "cyclic-import",
]

[tool.isort]
profile = "black"
multi_line_output = 3

