[tool.poetry]
name = "creat"
version = "0.6.7"
description = "CLI frontend for templating"
authors = ["Your Name <you@example.com>"]
license = "LGPL"
packages = [
    { include = "creat" }
]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
loguru = "^0.5.3"
strictyaml = "^1.2.0"
rich = "^9.8.2"
copier = "^5.1.0"
typer = "^0.3.2"
colorama = "^0.4.4"
shellingham = "^1.4.0"
watchgod = "^0.7"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^6.2.1"
safety = "^1.10.0"
black = "^20.8b1"
aiohttp = "^3.7.3"
aiohttp_cors = "^0.7.0"
bandit = "^1.7.0"
isort = "^4.2.5"
pre-commit = "^2.9.3"
mypy = "^0.800"
pytest-cov = "^2.11.1"
pytest-timeout = "^1.4.2"
pytest-xprocess = "^0.17.1"
Sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"
doit = "^0.33.1"

[tool.poetry.scripts]
creat = 'creat.__main__:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ['mk/']

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 90
